deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-toolkit
  labels:
    app: devops-toolkit
spec:
  selector:
    matchLabels:
      app: devops-toolkit
  template:
    metadata:
      labels:
        app: devops-toolkit
    spec:
      containers:
        - name: devops-toolkit
          image: omkar5655/hello
          ports:
            - containerPort: 80
